examples/QuartoPlatform/k8s/base/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: quarto
spec:
  selector:
    app: gateway
  ports:
    - port: 8080
