examples/QuartoPlatform/k8s/base/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: quarto
spec:
  selector:
    app: redis
  ports:
    - port: 6379
